# Avionics_PC-Tools_V2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pctools_uidesign.ui
src-cpp/: main.cpp  ui_pctools_uidesign.h
src-cpp/dialogs/: FlightDataFormatDialog.cpp  FlightDataFormatDialog.hpp
src-cpp/emulation/: EmulationController.hpp
src-cpp/serial/: Makefile  c_serial.h  cmake_install.cmake  config.h  serial.cpp
src-cpp/utilities/: ChartDialogUtils.h  QDirFinder.cpp  common.h
src-cpp/widgets/: FlightEmulationWidget.h  SerialPortSelectorWidget.cpp  TerminalWidget.cpp
src-cpp/widgets/graphics/cube/: Makefile  cmake_install.cmake  rotationcube.cpp  rotationcube.h  vshader.glsl
src-cpp/widgets/graphics/cube/math/: quaternion.h  sensor_processing_lib.h
src-cpp/windows/: MainWindow.cpp
src/emulation/: DataFeeder.cpp  DataFeeder.hpp  EmulationController.cpp  EventDetector.cpp  EventDetector.h  IRunnable.hpp  definitions.h
src/serial/: CMakeLists.txt  c_serial.c  serial.h
src/utilities/: CSVHelper.h  ChartDialogUtils.cpp  QDirFinder.h  csv.h  data_window.h
src/widgets/: DebuggingToolsWidget.cpp  DebuggingToolsWidget.h  FlightEmulationWidget.cpp  OnBoardSensorsTestWidget.cpp  OnBoardSensorsTestWidget.h  SerialPortSelectorWidget.h  TerminalWidget.h
src/widgets/graphics/cube/: CMakeLists.txt  fshader.glsl  geometryengine.cpp
src/widgets/graphics/cube/math/: sensor_processing_lib.cpp  vector_3d.h
src/windows/: MainWindow.h
